Fixed Top bar spacing

--- a/style.css
+++ b/style.css
@@ -51,6 +51,10 @@ body {
     background-color: #1f2937;
 }
 
+.top-bar .row {
+    padding: 20px 30px;
+}
+
 .navbar {
     color:#fff;
     display: flex;
